<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="subtitle_upcoming">Recomendation Event For You!</string>
    <string name="title_upcoming_event">Dicoding Event</string>
    <string name="event_image">event_image</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="register">View More</string>
    <string name="search_events">Search events</string>
    <string name="no_data_available">No data available</string>
    <string name="no_upcoming_event_available">No Upcoming Event Available</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="no_favorite_events">No Favorite Events</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="love">Love</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="enable_notification">Enable notification</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enable_dark_mode">Enable dark mode</string>
</resources>