<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:checked="true"/>

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_event_note_24"
        android:title="@string/title_upcoming" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_event_finished_24"
        android:title="@string/title_finished" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/setting" />

</menu>