<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dark_mode"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/sm_switch_theme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sm_switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_dark_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_dark_mode"
        app:layout_constraintVertical_bias="0.076"
        android:contentDescription="@string/enable_dark_mode"
      />

    <TextView
        android:id="@+id/tv_dark_mode_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_mode"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/daily_reminder"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/sm_switch_reminder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_mode_desc"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sm_switch_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/tv_reminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_reminder"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/enable_notification"
        />

    <TextView
        android:id="@+id/tv_reminder_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_notification"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_reminder"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
