<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_event_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/event_image"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/tv_event_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_title"
            android:textAppearance="?android:textAppearanceMedium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_event_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_delete_favorite"
            app:layout_constraintBottom_toTopOf="@id/tv_event_subtitle"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginVertical="8dp"
            android:gravity="center_vertical" />

        <TextView
            android:id="@+id/tv_event_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/event_description"
            android:textAppearance="?android:textAppearanceSmall"
            app:layout_constraintTop_toBottomOf="@id/tv_event_title"
            app:layout_constraintStart_toStartOf="@id/tv_event_title"
            app:layout_constraintEnd_toEndOf="@id/tv_event_title"
            app:layout_constraintEnd_toStartOf="@id/iv_delete_favorite"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical" />

        <ImageView
            android:id="@+id/iv_delete_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_delete_24"
            android:contentDescription="@string/remove_from_favorite"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
