<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_event_detail_fragment"
            app:destination="@id/event_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.dicodingevent.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_event_detail_fragment"
            app:destination="@id/event_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.dicodingevent.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished">
        <action
            android:id="@+id/action_navigation_finished_to_event_detail_fragment"
            app:destination="@id/event_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/event_detail_fragment"
        android:name="com.example.dicodingevent.ui.event_detail.EventDetailFragment"
        android:label="Event Detail"
        tools:layout="@layout/fragment_event_detail">
        <argument
            android:name="EVENT_ID"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.dicodingevent.ui.favorite.FavoriteFragment"
        android:label="Favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_event_detail_fragment"
            app:destination="@id/event_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.dicodingevent.ui.settings.SettingsFragment"
        android:label="Setting"
        tools:layout="@layout/fragment_settings" />
</navigation>